docs: Add traffic integration daily summary and update gitignore
- Add comprehensive daily summary (Jan 3, 2026)
- Update .gitignore to exclude traffic_data (16MB, 882 files)
- Exclude generated HTML maps (keep only main combined map)

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,11 @@ srtm/
 Traffic_Integration/apikeys/
 apikeys/
 
+# Traffic Integration - Generated data (can be regenerated)
+Traffic_Integration/traffic_data/
+Traffic_Integration/maps/*.html
+!Traffic_Integration/maps/combined_features_map.html
+
 # System files
 .DS_Store
 Thumbs.db
